--- a/dashboard.html
+++ b/dashboard.html
@@ -5,71 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Staff Portal - Dashboard</title>
   <link rel="stylesheet" href="dashboardsidebar.css" />
-  <style>
-    /* Additional layout fixes */
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-    }
-
-    .site-header {
-      background-color: #004d00;
-      color: white;
-      padding: 15px 0 5px;
-      text-align: center;
-    }
-
-    .site-header h1 {
-      font-size: 26px;
-      margin: 0;
-      line-height: 1.2;
-    }
-
-    .site-header p {
-      margin: 0;
-      font-size: 14px;
-      color: #ccc;
-    }
-
-    .dashboard-header {
-      background-color: #e0e0e0;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      border-bottom: 1px solid #ccc;
-    }
-
-    .container {
-      display: flex;
-      margin-top: 10px;
-    }
-
-    .content {
-      flex: 1;
-      padding: 20px;
-      background-color: #f5f5f5;
-      min-height: calc(100vh - 130px); /* Adjust height minus header and dashboard-header */
-    }
-
-    .toggle-button {
-      display: none; /* Show if mobile */
-    }
-
-    /* Overlay for mobile */
-    .overlay {
-      display: none;
-      position: fixed;
-      top: 60px;
-      left: 0;
-      width: 100%;
-      height: calc(100% - 60px);
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 998;
-    }
-  </style>
 </head>
 <body>
 
@@ -86,12 +21,12 @@
   </div>
 
   <!-- TOGGLE BUTTON & OVERLAY (MOBILE) -->
-  <div class="toggle-button">☰</div>
+  <div class="toggle-button" id="toggle-btn">☰</div>
   <div class="overlay" id="overlay"></div>
 
   <!-- MAIN CONTAINER -->
   <div class="container">
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
       <ul class="menu">
         <li><a href="#" data-content="dashboard">Dashboard</a></li>
         <li class="has-submenu">
@@ -121,13 +56,37 @@
       </ul>
     </div>
 
-    <div class="content">
+    <div class="content" id="main-content">
       <h2>Dashboard</h2>
       <p>This is the dashboard content.</p>
     </div>
   </div>
 
-  <!-- Load sidebar JavaScript -->
-  <script src="dashboardsidebar.js"></script>
+  <!-- Toggle sidebar JS -->
+  <script>
+    const toggleBtn = document.getElementById("toggle-btn");
+    const sidebar = document.getElementById("sidebar");
+    const overlay = document.getElementById("overlay");
+
+    toggleBtn.addEventListener("click", () => {
+      sidebar.classList.toggle("collapsed");
+      overlay.style.display = sidebar.classList.contains("collapsed") ? "block" : "none";
+    });
+
+    overlay.addEventListener("click", () => {
+      sidebar.classList.remove("collapsed");
+      overlay.style.display = "none";
+    });
+
+    // Handle submenu toggling
+    document.querySelectorAll(".has-submenu > a").forEach(item => {
+      item.addEventListener("click", e => {
+        e.preventDefault();
+        const parent = item.parentElement;
+        parent.classList.toggle("open");
+      });
+    });
+  </script>
 </body>
 </html>
+
