--- a/dashboard.html
+++ b/dashboard.html
@@ -1,92 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Staff Portal - Dashboard</title>
-  <link rel="stylesheet" href="dashboardsidebar.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Staff Portal - Dashboard</title>
+    <link rel="stylesheet" href="dashboardsidebar.css">
+    <style>
+        .dashboard-header {
+            background-color: #f0f0f0;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+        }
+        .user-info {
+            margin-right: 20px;
+            font-size: 0.9em;
+            color: #555;
+        }
+        .logout-button {
+            background-color: #d32f2f; /* Red color for logout */
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.9em;
+        }
+        .logout-button:hover {
+            background-color: #b71c1c;
+        }
+    </style>
 </head>
 <body>
-
-  <!-- SITE HEADER -->
-  <div class="site-header">
     <h1>MOUNT ZION MEDICAL COLLEGE</h1>
-    <p>Staff Portal</p>
-  </div>
-
-  <!-- USER INFO / LOGOUT -->
-  <div class="dashboard-header">
-    <div class="user-info" id="user-email-display">staff@example.com</div>
-    <button class="logout-button" id="logout-btn">Logout</button>
-  </div>
-
-  <!-- TOGGLE BUTTON & OVERLAY (MOBILE) -->
-  <div class="toggle-button" id="toggle-btn">☰</div>
-  <div class="overlay" id="overlay"></div>
-
-  <!-- MAIN CONTAINER -->
-  <div class="container">
-    <div class="sidebar" id="sidebar">
-      <ul class="menu">
-        <li><a href="#" data-content="dashboard">Dashboard</a></li>
-        <li class="has-submenu">
-          <a href="#">Leave Request</a>
-          <ul class="submenu">
-            <li><a href="#" data-content="leave-apply">Apply</a></li>
-            <li><a href="#" data-content="leave-status">Status</a></li>
-            <li><a href="#" data-content="leave-history">History</a></li>
-          </ul>
-        </li>
-        <li class="has-submenu">
-          <a href="#">Purchase Request</a>
-          <ul class="submenu">
-            <li><a href="#" data-content="purchase-new">New</a></li>
-            <li><a href="#" data-content="purchase-status">Status</a></li>
-            <li><a href="#" data-content="purchase-history">History</a></li>
-          </ul>
-        </li>
-        <li class="has-submenu">
-          <a href="#">Service Request</a>
-          <ul class="submenu">
-            <li><a href="#" data-content="service-new">New</a></li>
-            <li><a href="#" data-content="service-status">Status</a></li>
-            <li><a href="#" data-content="service-history">History</a></li>
-          </ul>
-        </li>
-      </ul>
+    <p style="text-align: center; color: #999;">Staff Portal</p>
+    <div class="dashboard-header">
+        <div class="user-info" id="user-email-display"></div>
+        <button class="logout-button" id="logout-btn">Logout</button>
     </div>
-
-    <div class="content" id="main-content">
-      <h2>Dashboard</h2>
-      <p>This is the dashboard content.</p>
+    <div class="container">
+        <div class="sidebar">
+            <div class="toggle-button">☰</div>
+            <ul class="menu">
+                <li><a href="#" data-content="dashboard">Dashboard</a></li>
+                <li class="has-submenu">
+                    <a href="#">Leave Request</a>
+                    <ul class="submenu">
+                        <li><a href="#" data-content="leave-apply">Apply</a></li>
+                        <li><a href="#" data-content="leave-status">Status</a></li>
+                        <li><a href="#" data-content="leave-history">History</a></li>
+                    </ul>
+                </li>
+                <li class="has-submenu">
+                    <a href="#">Purchase Request</a>
+                    <ul class="submenu">
+                        <li><a href="#" data-content="purchase-new">New</a></li>
+                        <li><a href="#" data-content="purchase-status">Status</a></li>
+                        <li><a href="#" data-content="purchase-history">History</a></li>
+                    </ul>
+                </li>
+                <li class="has-submenu">
+                    <a href="#">Service Request</a>
+                    <ul class="submenu">
+                        <li><a href="#" data-content="service-new">New</a></li>
+                        <li><a href="#" data-content="service-status">Status</a></li>
+                        <li><a href="#" data-content="service-history">History</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>Dashboard</h1>
+            <p>This is the dashboard content.</p>
+        </div>
     </div>
-  </div>
-
-  <!-- Toggle sidebar JS -->
-  <script>
-    const toggleBtn = document.getElementById("toggle-btn");
-    const sidebar = document.getElementById("sidebar");
-    const overlay = document.getElementById("overlay");
-
-    toggleBtn.addEventListener("click", () => {
-      sidebar.classList.toggle("collapsed");
-      overlay.style.display = sidebar.classList.contains("collapsed") ? "block" : "none";
-    });
-
-    overlay.addEventListener("click", () => {
-      sidebar.classList.remove("collapsed");
-      overlay.style.display = "none";
-    });
-
-    // Handle submenu toggling
-    document.querySelectorAll(".has-submenu > a").forEach(item => {
-      item.addEventListener("click", e => {
-        e.preventDefault();
-        const parent = item.parentElement;
-        parent.classList.toggle("open");
-      });
-    });
-  </script>
+    <script src="dashboardsidebar.js"></script>
 </body>
 </html>
-
