--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+  // Check if the device is mobile
+  if (window.innerWidth <= 768) {
+    window.location.href = 'mobiledashboard.html';
+  }
+</script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Staff Portal - Dashboard</title>
