--- a/mobiledashboard.html
+++ b/mobiledashboard.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Staff Portal - Mobile</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Staff Portal - Mobile View</title>
   <link rel="stylesheet" href="mobiledashboard.css">
 </head>
 <body>
-  <div class="mobile-header">
-    <div class="menu-toggle" id="menu-toggle">☰</div>
-    <h1>MOUNT ZION MEDICAL COLLEGE</h1>
-  </div>
 
-  <p class="subheading">Staff Portal</p>
+  <!-- Toggle Menu Button -->
+  <div class="toggle-button" id="menuToggle">☰</div>
 
-  <div class="mobile-sidebar" id="mobile-sidebar">
-    <ul class="mobile-menu">
+  <!-- Sidebar Menu -->
+  <div class="sidebar" id="sidebar">
+    <ul class="menu">
       <li class="has-submenu">
         <a href="#">Leave Request</a>
         <ul class="submenu">
@@ -43,8 +41,11 @@
     </ul>
   </div>
 
-  <div class="mobile-content">
-    <p>This is the mobile dashboard content.</p>
+  <!-- Main Content -->
+  <div class="content">
+    <h1>MOUNT ZION MEDICAL COLLEGE</h1>
+    <p>Staff Portal</p>
+    <p>Welcome to the mobile version of the staff portal.</p>
   </div>
 
   <script src="mobiledashboard.js"></script>
